# testforge

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  testforge.yaml
.omc/: cursor-batch-v03-final.md  cursor-batch-v04-dogfooding.md  cursor-batch-v05-hardening.md  cursor-batch-v06-swarm.md  prd.json  progress.txt  project-memory.json
.omc/reviews/: phantom-frontend.json  phantom-pm.json  phantom-qa.json  phantom-security.json  synthesis.md  v06-final-verdict.md
.omc/sessions/: 0e033246-c93e-4b5b-b16e-a186da991a39.json  19a45f4a-f624-4d79-ad60-7f42e2b4764d.json  203a0fce-98d6-48df-99e8-2f5eb03d8fab.json  33b890ce-3ae7-4462-875c-c3ad089b4b95.json  7cfc6ad3-b7f8-40de-9533-1f93c4d530b0.json  bd58c665-1a64-4f91-9529-69a1179da09c.json
.omc/state/: agent-replay-0e033246-c93e-4b5b-b16e-a186da991a39.jsonl  agent-replay-58344fa6-0c97-4c4e-a923-e2025f21d289.jsonl  idle-notif-cooldown.json  last-tool-error.json
.omc/wave1/: accessibility.json  auth-audit.json  docs-accuracy.json  i18n-completeness.json  path-traversal.json  performance.json  ssrf-lfi.json  xss-vectors.json
.omc/wave2/: docs-plan.md  security-plan.md  ux-plan.md
.omc/wave4/: a11y-recheck.json  dogfood-results.txt  i18n-recheck.json  security-recheck.json  test-results.txt
AgentHive QA/analysis/: analysis.json
AgentHive QA/cases/: cases.json
docs/: architecture.md  cli-reference.md  configuration.md  getting-started.md
research/: summary.json
tests/: __init__.py  conftest.py  test_assertions.py  test_checklist.py  test_cli.py  test_coverage.py  test_e2e.py  test_ollama.py  test_pipeline.py  test_research.py  test_runner.py  test_scripts.py  test_security.py  test_tui.py  test_usecases.py  test_web.py
(+178 files in other folders)
